[tool.poetry]
name = "pyq-builder"
version = "0.1.0"
description = ""
authors = ["Gustavo Correa <self.gustavocorrea@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = { version = "^1.8.2", optional = true }
context-handler = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
coverage = "^6.1.1"
pylint = "^2.11.1"
black = "^21.10b0"
Faker = "^9.8.0"
hypothesis = "^6.24.2"
isort = "^5.10.0"
autoflake = "^1.4"
pytest-sugar = "^0.9.4"
pydantic = "^1.8.2"
aiomysql = "^0.0.21"
asyncpg = "^0.24.0"
aiosqlite = "^0.17.0"

[tool.poetry.extras]
pydantic = ["pydantic"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
changelog = true
annotated_tag = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
